tests/errors/no_superfluous_phpdoc_tags.php
<?php

declare(strict_types=1);

/**
 * @param int $a
 * @param string $b
 *
 * @return void
 */
function hello(int $a, string $b): void
{
}
